--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,7 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: corne_right
   - board: nice_nano_v2
